--- a/buildspec.yml
+++ b/buildspec.yml
@@ -77,6 +77,11 @@ phases:
                     image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$_PROJECT_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION
                     ports:
                       - containerPort: 8080
+                    resources:
+                      limits:       #HPA
+                        cpu: 500m   #HPA
+                      requests:     #HPA
+                        cpu: 200m   #HPA
           EOF
 #cache:
   #paths:
