--- a/buildspec.yml
+++ b/buildspec.yml
@@ -77,6 +77,10 @@ phases:
                     image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$_PROJECT_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION
                     ports:
                       - containerPort: 8080
+                    args:           #liveness
+                      - /bin/sh     #liveness
+                      - -c          #liveness
+                      - touch /tmp/test; sleep 30; rm -rf /tmp/test; sleep 600  #liveness   
                     resources:
                       limits:       #HPA
                         cpu: 500m   #HPA
@@ -90,6 +94,13 @@ phases:
                       timeoutSeconds: 2       
                       periodSeconds: 5        
                       failureThreshold: 10    
+                    livenessProbe:
+                      exec:          #liveness
+                        command:     #liveness
+                        - cat        #liveness
+                        - /tmp/test  #liveness
+                      initialDelaySeconds: 5  #liveness
+                      periodSeconds: 5  #liveness
           EOF
 #cache:
   #paths:
